--- a/index.html
+++ b/index.html
@@ -16,8 +16,34 @@
   </head>
   <body>
     <div class="container">
-      <h1>Hello World!</h1>
-      <button class="btn btn-primary">Check</button>
+      <div class="weather-app">
+        <h1>New York</h1>
+        <ul>
+          <li>Friday 05:00</li>
+          <li>Clear</li>
+        </ul>
+        <div class="row">
+          <div class="col-md-6">
+            <img
+              src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+              alt="Clear"
+            />
+            29 &degC / &degF
+          </div>
+          <div class="col-md-6">
+            <ul>
+              <li>Precipitation: 0%</li>
+              <li>Humidity: 47%</li>
+              <li>Wind: 13 km/h</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <small>
+        <a href="https://github.com/Viktoriia755/Weather-app" target="_blank">
+          Link to my GitHUB </a
+        >, just click on it:)
+      </small>
     </div>
     <script src="src/app.js"></script>
   </body>
