--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="src/style.css" rel="stylesheet" />
+
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
@@ -12,38 +12,49 @@
       integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
       crossorigin="anonymous"
     />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <link href="src/style.css" rel="stylesheet" />
     <title>Weather Forecast</title>
   </head>
   <body>
     <div class="container">
-      <div class="weather-app">
-        <h1>New York</h1>
-        <ul>
-          <li>Friday 05:00</li>
-          <li>Clear</li>
-        </ul>
-        <div class="row">
-          <div class="col-md-6">
-            <img
-              src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
-              alt="Clear"
-            />
-            29 &degC / &degF
-          </div>
-          <div class="col-md-6">
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <div class="overview">
+            <h1>New York</h1>
             <ul>
-              <li>Precipitation: 0%</li>
-              <li>Humidity: 47%</li>
-              <li>Wind: 13 km/h</li>
+              <li>Friday 05:00</li>
+              <li>Clear</li>
             </ul>
           </div>
+
+          <div class="row">
+            <div class="col-md-6">
+              <div class="clearfix weather-temperature">
+                <img
+                  src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+                  alt="Clear"
+                />
+                <strong>29</strong>
+                <span class="units">&degC / <a href="">&degF </a></span>
+              </div>
+            </div>
+
+            <div class="col-md-6">
+              <ul>
+                <li>Precipitation: 0%</li>
+                <li>Humidity: 47%</li>
+                <li>Wind: 13 km/h</li>
+              </ul>
+            </div>
+          </div>
         </div>
+        <small>
+          <a href="https://github.com/Viktoriia755/Weather-app" target="_blank">
+            Link to my GitHUB </a
+          >, just click on it:)
+        </small>
       </div>
-      <small>
-        <a href="https://github.com/Viktoriia755/Weather-app" target="_blank">
-          Link to my GitHUB </a
-        >, just click on it:)
-      </small>
     </div>
     <script src="src/app.js"></script>
   </body>
