--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
       <div class="weather-app-wrapper">
         <div class="weather-app">
           <div class="overview">
-            <h1>New York</h1>
+            <h1><span id="city"> </span>, <span id="country"> </span></h1>
+
             <ul>
               <li>Friday 05:00</li>
-              <li>Clear</li>
+              <li id="description"></li>
             </ul>
           </div>
 
@@ -35,16 +36,16 @@
                   src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
                   alt="Clear"
                 />
-                <strong>29</strong>
+                <strong id="temperature"></strong>
                 <span class="units">&degC / <a href="">&degF </a></span>
               </div>
             </div>
 
             <div class="col-md-6">
               <ul>
-                <li>Precipitation: 0%</li>
-                <li>Humidity: 47%</li>
-                <li>Wind: 13 km/h</li>
+                <li>Humidity: <span id="humidity"> </span>%</li>
+                <li>Wind: <span id="windspeed"></span> km/h</li>
+                <li>Pressure: <span id="pressure"> </span> hPa</li>
               </ul>
             </div>
           </div>
