--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1><span id="city"> </span>, <span id="country"> </span></h1>
 
             <ul>
-              <li>Friday 05:00</li>
+              <li>Last updated: <span id="date"> </span></li>
               <li id="description"></li>
             </ul>
           </div>
