--- a/index.html
+++ b/index.html
@@ -32,10 +32,7 @@
           <div class="row">
             <div class="col-md-6">
               <div class="clearfix weather-temperature">
-                <img
-                  src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
-                  alt="Clear"
-                />
+                <img src="" alt="Clear" id="icon" />
                 <strong id="temperature"></strong>
                 <span class="units">&degC / <a href="">&degF </a></span>
               </div>
